fix overflow on safari

--- a/components/UI/Modal.css
+++ b/components/UI/Modal.css
@@ -36,7 +36,8 @@
 
 .modal .modal-body {
   max-height: 60vh;
-  overflow: hidden auto;
+  overflow-x: hidden;
+  overflow-y: auto;
   padding: 0 20px;
 }
 
